test_suite/tests/ui/fail/invalid_attr_value_for_subcommand/invalid_subcommand_version.stderr
error: custom attribute panicked
 --> $DIR/invalid_subcommand_version.rs:3:1
  |
3 | #[command]
  | ^^^^^^^^^^
  |
  = help: message: `version` must be an integer, float or string literal
